syntax = "proto3";

package protos;

service Logger {
    rpc LogLogin(LogLoginReq) returns (LogLoginRes) {}
}

message Emtpy {}

message LogLoginReq {
    string UserId = 1;
}

message LogLoginRes {
    int64 LastLogin = 1;
}
